--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -237,74 +237,113 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2364</th>\n",
-       "      <td>2365</td>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>USC00519397</td>\n",
-       "      <td>2016-08-24</td>\n",
+       "      <td>2010-01-01</td>\n",
        "      <td>0.08</td>\n",
-       "      <td>79.0</td>\n",
+       "      <td>65.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5091</th>\n",
-       "      <td>5092</td>\n",
-       "      <td>USC00513117</td>\n",
-       "      <td>2016-08-24</td>\n",
-       "      <td>2.15</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>63.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-03</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>76.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7331</th>\n",
-       "      <td>7332</td>\n",
-       "      <td>USC00514830</td>\n",
-       "      <td>2016-08-24</td>\n",
-       "      <td>2.28</td>\n",
-       "      <td>80.0</td>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8825</th>\n",
-       "      <td>8826</td>\n",
-       "      <td>USC00517948</td>\n",
-       "      <td>2016-08-24</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19545</th>\n",
+       "      <td>19546</td>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-19</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>71.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19546</th>\n",
+       "      <td>19547</td>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-20</td>\n",
        "      <td>NaN</td>\n",
        "      <td>78.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11851</th>\n",
-       "      <td>11852</td>\n",
-       "      <td>USC00519523</td>\n",
-       "      <td>2016-08-24</td>\n",
-       "      <td>1.22</td>\n",
-       "      <td>79.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14608</th>\n",
-       "      <td>14609</td>\n",
-       "      <td>USC00519281</td>\n",
-       "      <td>2016-08-24</td>\n",
-       "      <td>2.15</td>\n",
-       "      <td>77.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19202</th>\n",
-       "      <td>19203</td>\n",
+       "      <th>19547</th>\n",
+       "      <td>19548</td>\n",
        "      <td>USC00516128</td>\n",
-       "      <td>2016-08-24</td>\n",
-       "      <td>1.45</td>\n",
-       "      <td>74.0</td>\n",
+       "      <td>2017-08-21</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19548</th>\n",
+       "      <td>19549</td>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-22</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19549</th>\n",
+       "      <td>19550</td>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-23</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>76.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>19550 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "          id      station        date  prcp  tobs\n",
-       "2364    2365  USC00519397  2016-08-24  0.08  79.0\n",
-       "5091    5092  USC00513117  2016-08-24  2.15  76.0\n",
-       "7331    7332  USC00514830  2016-08-24  2.28  80.0\n",
-       "8825    8826  USC00517948  2016-08-24   NaN  78.0\n",
-       "11851  11852  USC00519523  2016-08-24  1.22  79.0\n",
-       "14608  14609  USC00519281  2016-08-24  2.15  77.0\n",
-       "19202  19203  USC00516128  2016-08-24  1.45  74.0"
+       "0          1  USC00519397  2010-01-01  0.08  65.0\n",
+       "1          2  USC00519397  2010-01-02  0.00  63.0\n",
+       "2          3  USC00519397  2010-01-03  0.00  74.0\n",
+       "3          4  USC00519397  2010-01-04  0.00  76.0\n",
+       "4          5  USC00519397  2010-01-06   NaN  73.0\n",
+       "...      ...          ...         ...   ...   ...\n",
+       "19545  19546  USC00516128  2017-08-19  0.09  71.0\n",
+       "19546  19547  USC00516128  2017-08-20   NaN  78.0\n",
+       "19547  19548  USC00516128  2017-08-21  0.56  76.0\n",
+       "19548  19549  USC00516128  2017-08-22  0.50  76.0\n",
+       "19549  19550  USC00516128  2017-08-23  0.45  76.0\n",
+       "\n",
+       "[19550 rows x 5 columns]"
       ]
      },
      "execution_count": 15,
@@ -314,7 +353,7 @@
    ],
    "source": [
     "ms_df = pd.read_sql('select * from measurement;',conn)\n",
-    "ms_df.loc[ms_df['date']=='2016-08-24']"
+    "ms_df"
    ]
   },
   {
